# pefe-ief

./: .gitignore  README.md  setup.cfg  setup.py
pefe_ief/: __init__.py
pefe_ief/dataset/: __init__.py
pefe_ief/ief/: __init__.py  ief.py
pefe_ief/metrics/: simple_stats.py
pefe_ief/metrics/curves/: roc_and_friends.py
pefe_ief/models/: abstract_model.py
