[metadata]
name = pefe-ief
version = attr: pefe_ief.__version__
author = Vu Tung Lam
author_email = vutunglaminfo@gmail.com
description = PEFE system - model inference and evaluation module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pefe-system/pefe-ief
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    lmdb==1.7.3
    msgpack>=0.6.2,<=1.1.1
    msgpack-numpy==0.4.8
    tqdm
    scikit-learn>=0.24.2
    matplotlib>=3.3.4

[options.packages.find]
where = .
